# lossysc

./: README.md
frontier_performance/test_all/: CMakeLists.txt  MGARD_hdf5.cpp  MGARD_hdf5_double.cpp  SZ_hdf5_cpu.cc  SZ_hdf5_gpu.cc  ZFP_hdf5.cpp  ZFP_hdf5_double.cpp
model/MGARD-1.5.0/include/: compress_x_lowlevel.hpp
model/MGARD-1.5.0/include/include/mgard-x/CompressionHighLevel/: CompressionHighLevel.hpp
model/MGARD-1.5.0/include/include/mgard-x/DataRefactoring/: DataRefactor.hpp
model/MGARD-1.5.0/include/include/mgard-x/DataRefactoring/MultiDimension/: DataRefactoring.hpp
model/MGARD-1.5.0/include/include/mgard-x/DataRefactoring/MultiDimension/Coefficient/: CalcCoefficients3D.hpp  GridProcessingKernel3D.hpp
model/MGARD-1.5.0/include/include/mgard-x/DataRefactoring/MultiDimension/Correction/: CalcCorrection3D.hpp  IterativeProcessingKernel3D.hpp  LevelwiseProcessingKernel.hpp  LinearProcessingKernel3D.hpp
model/MGARD-1.5.0/include/include/mgard-x/Lossless/ParallelHuffman/: Condense.hpp  Deflate.hpp  EncodeFixedLen.hpp  FillArraySequence.hpp  GenerateCL.hpp  GenerateCW.hpp  GetCodebook.hpp  GetFirstNonzeroIndex.hpp  Histogram.hpp  Huffman.hpp  ReorderByIndex.hpp  ReverseArray.hpp
model/MGARD-1.5.0/include/include/mgard-x/MDR-X/BitplaneEncoder/: BitplaneEncoder.hpp  GroupedBPEncoder.hpp  GroupedBPEncoderGPU.hpp  GroupedWarpBPEncoderGPU.hpp  NegaBinaryBPEncoder.hpp  PerBitBPEncoder.hpp  PerBitBPEncoderGPU.hpp
model/MGARD-1.5.0/include/include/mgard-x/MDR-X/Decomposer/: recompose.hpp
model/MGARD-1.5.0/include/include/mgard-x/MDR-X/Reconstructor/: ComposedReconstructor.hpp
model/MGARD-1.5.0/include/include/mgard-x/MDR-X/SizeInterpreter/: GreedyBasedSizeInterpreter.hpp
model/MGARD-1.5.0/include/include/mgard-x/MDRHighLevel/: MDRHighLevel.hpp
model/MGARD-1.5.0/include/include/mgard-x/Metadata/: Metadata.hpp
model/MGARD-1.5.0/include/include/mgard-x/Quantization/: LinearQuantization.hpp
model/MGARD-1.5.0/include/include/mgard-x/RuntimeX/DataStructures/: MDRData.hpp  MDRMetadata.hpp
model/MGARD-1.5.0/include/include/mgard-x/RuntimeX/DeviceAdapters/: DeviceAdapterCuda.h  DeviceAdapterSerial.h
model/MGARD-1.5.0/include/include/mgard-x/RuntimeX/Functors/: Functor.h
model/MGARD-1.5.0/include/include/mgard-x/RuntimeX/Utilities/: SubArrayPrinter.hpp  SubArrayPrinter_zhenlu.hpp  Timer.hpp
model/MGARD-1.5.0/src/mgard-x/DataRefactoring/: CMakeLists.txt
model/MGARD-1.5.0/src/mgard-x/DataRefactoring/MultiDimension/: Decompose.cpp.in
model/MGARD-1.5.0/src/src/mgard-x/Config/: Config.cpp
model/MGARD-1.5.0/src/src/mgard-x/Executables/: mdr-x.cpp  mdr-x_copy.cpp  mgard-x.cpp
model/model_code/: README.md  extract_info.py  gaussian_node.py  general.py  mgard_gpu.py  parse_time_nvprof_com.py  perf_statistic.py  total_grid_calculate.py
power/SZ-2.1.12.5/sz/sz/include/: defines.h  utility.h
power/SZ-2.1.12.5/sz/sz/src/: Huffman.c  sz.c  sz_double.c  sz_float.c  utility.c
qoi/: CMakeLists.txt  README_error  qoi_average.cpp  qoi_linear.cpp
qoi/SZ-qoi/SZ3/include/SZ3/api/impl/: SZInterp.hpp
qoi/SZ-qoi/SZ3/include/SZ3/qoi/: QoIInfo.hpp  RegionalAverage.hpp  XSquare.hpp
qoi/SZ-qoi/SZ3/include/SZ3/utils/: Statistic.hpp
qoi/SZ-qoi/SZ3/linear/: sz.config  sz.config_EXAFE1  sz.config_EXAFE3  sz.config_exaalt1  sz.config_exaalt2  sz.config_exaalt3  sz.config_gcld1  sz.config_gcld2  sz.config_gcld3
qoi/SZ-qoi/SZ3/test/: aaa.txt  interval.py  sz.config_EXAFE2  sz.config_exaalt1  sz.config_exaalt2  sz.config_exaalt3  sz.config_gcld1  sz.config_gcld2  sz.config_gcld3
qoi/SZ_average/: run.sh
qoi/SZ_linear/: run.sh
qoi/mgard_average/: run.sh
qoi/mgard_linear/: mgard_2d_exaalt_a_0.5.txt  mgard_2d_exaalt_a_0.txt  mgard_2d_exaalt_a_1.txt  mgard_2d_exaalt_a_inf.txt  mgard_2d_gcld_a_0.5.txt  mgard_2d_gcld_a_0.txt  mgard_2d_gcld_a_1.txt  mgard_2d_gcld_a_inf.txt  mgard_3d_exaalt_a_0.5.txt  mgard_3d_exaalt_a_0.txt  mgard_3d_exaalt_a_1.txt  mgard_3d_exaalt_a_inf.txt  mgard_3d_gcld_a_0.5.txt  mgard_3d_gcld_a_0.txt  mgard_3d_gcld_a_1.txt  mgard_3d_gcld_a_inf.txt  run.sh
summit_performance/ADIOS_CPU/: CMakeLists.txt  SZ_cpu_simulation.cpp  SZ_cpu_simulation_ICLDIWP.cpp  SZ_cpu_simulation_para_iter.cpp  SZ_cpu_simulation_para_iter_single.cpp  ZFP_cpu_simulation_iter.cpp  ZFP_cpu_simulation_iter_exaalt.cpp  cpu-application-simulator.cpp  cpu-application-simulator_exaalt.cpp
summit_performance/ADIOS_GPU/: CMakeLists.txt  SZ_cpu_simulation_cuda_iter_ICLDIWP.cc  ZFP_cpu_simulation_iter_double_general.cpp  ZFP_cpu_simulation_iter_single.cpp  cpu-application-simulator.cpp  cpu-application-simulator_GCLDLWP.cpp
summit_performance/hdf5/: .CMakeLists.txt.swp  CMakeLists.txt  MGARD_hdf5.cpp  MGARD_hdf5_double.cpp  MGARD_hdf5_special.cpp  SZ_hdf5_cpu.cc  SZ_hdf5_gpu.cc  ZFP_hdf5.cpp  ZFP_hdf5_double.cpp
